--- a/_config.yml
+++ b/_config.yml
@@ -73,12 +73,12 @@ author:
 social-network-links:
   rss: true
   email: "someone@example.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+  facebook: sagirsaar
+  github: saar4ever
+#   twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
-#  linkedin: daattali
+ linkedin: saar-sagir
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
