--- a/_config.yml
+++ b/_config.yml
@@ -71,14 +71,14 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: true
+#   rss: true
   email: "someone@example.com"
   facebook: sagirsaar
   github: saar4ever
+  linkedin: saar-sagir
 #   twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
- linkedin: saar-sagir
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -99,7 +99,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+# url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
