--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: A virtual proof that Saar is awesome!
 navbar-links:
   About Me: "aboutme"
   Events: "cal"
-  Author's home: "http://www.saarx.com"
+  Author's home: "https://www.saarx.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
