Updating cal, title, and about me

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Saar Sagir
+title: Social And Altruistic Renegade Xtraordinaire
 
 # Short description of your site
 description: Event Coordinator
