--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: Event Coordinator
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
+  About Me: "aboutme/"
   Events: "cal"
   Home: "https://www.saarx.com"
 
