--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: Event Coordinator
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme/"
-  Events: "cal"
-  Home: "https://www.saarx.com"
+  Events: "cal/"
+  Home: "https://saarx.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
