--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Social And Altruistic Renegade Xtraordinaire
+title: Saar Sagir
 
 # Short description of your site
-description: Event Coordinator
+description: Social And Altruistic Renegade Xtraordinaire
 
 # --- Navigation bar options --- #
 
