--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ gtm: "UA-134769617-1"
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "saarsagir"
+disqus: "saarx"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
