--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,5 +2,5 @@ ports:
 - port: 4000
 - port: 4001
 tasks:
-- command: bundle install
+- init: bundle install
 - command: bundle exec jekyll serve --host 0.0.0.0
