--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,4 +2,4 @@ ports:
 - port: 4000
 - port: 4001
 tasks:
-- command: echo 'bundle install'; echo "bundle exec jekyll serve --host 0.0.0.0"
+- command: bundle install; bundle exec jekyll serve --host 0.0.0.0
